# intersection

./: .gitignore  .hgignore  CurryHoward.hs  Inter.v  Intersection.hs  IntersectionSubtyping.hs  Makefile  Pretty.hs  README.md  Reduction.hs  RunJava.hs  Spec.hs  Syntax.hs  Try.hs  abstract.txt  examples.sf  intersection.cabal  oa.sf  paper.org  references.md
Inter/: ExprParser.y  Lexer.x  Pretty.hs  Reduction.hs  Syntax.hs  ToJava.hs  Translation.hs  TypeCheck.hs  TypeParser.y
code/: Algebra.scala  Decorator.scala  Decorator.sf  EvenOdd.scala  Mixin.scala  ObjectAlgebra.sf  Point.hs  PointTraits.sf  Set.hs  Visitor.scala  Visitor.sf  counter.coffee  even_odd.coffee  fact.sf  norms.coffee  point.coffee  point3d.sf  trait_ml_like.sf
coq/: Inter.v  Inter2.v  Inter3.v  Inter4.v  Inter5.v  Inter6.v  ReflTrans.v  ReflexTrans.v
develop/: App.v  Overloading3.scala  proofs.txt  supplementary_materials.tex  very-late-binding.txt
esop-16/: .gitignore  Rakefile  TODO.txt  formalisation.tex  from-first-principles.txt  macros.tex  other-proofs.txt  outline.md  packages.tex  paper-full.tex  paper.tex  references.bib  reply.txt  reviews.txt
examples/: App.java  Lambda.java  Literal.java
formalization/: .gitignore  Main.tex  README.md  discussions.md  formalization.tex  formalization.txt  macros.tex  metatheory.tex  packages.tex  paper.tex
histories/: .gitignore  Rakefile  main.tex
merge/: Overloading.scala  Overloading2.scala  Rakefile  dynamics.txt  macros.tex  paper.tex  proofs.txt  references.bib
notes/: formalization.tex  packages.tex
oopsla-15/: macros.tex  (+4 more)
(+407 files in other folders)
