name:                   intersection
version:                0.1.0.0
category:               Language
stability:              experimental
cabal-version:          >= 1.8
build-type:             Simple

library
  hs-source-dirs:       .
  build-depends:        base == 4.6.*,
                        array == 0.4.*,
                        containers == 0.5.*,
                        wl-pprint == 1.1
  exposed-modules:      Inter.Syntax
                        Inter.TypeCheck
                        Inter.Lexer
                        Inter.ExprParser
                        Inter.TypeParser
                        Inter.Pretty
                        Inter.Reduction
  ghc-options:          -Wall

executable runjava
  hs-source-dirs:       .
  main-is:              RunJava.hs
  build-depends:        base == 4.6.*,
                        process == 1.2.*,
                        filepath == 1.3.*
  ghc-options:          -Wall
